--- a/assets/scss/02-layouts/home.scss
+++ b/assets/scss/02-layouts/home.scss
@@ -1,7 +1,8 @@
 .home{
     position: relative;
     width: 100%;
-            height: 100vh;
+    height: 100vh;
+    padding: 0 3.2rem 0 3.2rem;
     .main{
         width: 100%;
         height: 100vh;
@@ -19,6 +20,9 @@
                 width: 60%;
                 height: auto;
                 display: block;
+                @media (max-width: 992px) {
+                    width: 75%;
+                }
             }
         }
         &__description{
@@ -32,6 +36,9 @@
             p{
                 width: 60%;
                 text-align: center;
+                @media (max-width: 992px) {
+                    width: 75%;
+                }
             }
         }
     }
